@@ -30,6 +30,9 @@ version 2.7.11 (??/??/????):
 	  Alkemade) (#a14527)
 	* Extend the /join command to support room JIDs, enabling you to join
 	  a room on any server.  (Solarius, Matěj Cepl, wyuka) (#4526)
+	* Add support for receiving a limited amount of history when joining a
+	  room (not currently supported by Pidgin and Finch).  (Thijs Alkemade)
+	  (#10986, #a14219)
 
 version 2.7.10 (02/06/2011):
 	General:
